# ticketsniper

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/admin/: auth.py  views.py
backend/app/api/: __init__.py  api.py  deps.py
backend/app/api/endpoints/: __init__.py  auth.py  data.py  routes.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/crud/: __init__.py  crud_route.py  crud_user.py
backend/app/db/models/: __init__.py  route.py  user.py
backend/app/schemas/: __init__.py  available_route.py  location.py  message.py  route.py  token.py  user.py
backend/app/services/: __init__.py  email_service.py  regiojet_api_client.py  regiojet_checker_service.py  regiojet_data_parser.py  regiojet_data_service.py
backend/app/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py
backend/tests/api/endpoints/: test_auth.py  test_routes.py
backend/tests/core/: test_security.py
backend/tests/db/: test_crud_route.py  test_crud_user.py
backend/tests/fixtures/: available_routes.json  locations.json
backend/tests/services/: test_email_service.py  test_regiojet_api_client.py  test_regiojet_checker_service.py  test_regiojet_data_parser.py  test_regiojet_data_service.py
backend/tests/worker/: test_tasks.py
docs/: architecture_overview.md  async_worker.md  backend_api.md  database_schema.md  example_calls_to_regiojet_API.http  example_calls_to_regiojet_API_requests_only.http  frontend.md
(+41 files in other folders)
